@@ -70,6 +70,9 @@
     <Compile Include="Compilation\LanguageHelperFactory.cs" />
     <Compile Include="Compilation\VisualBasicHelper.cs" />
     <Compile Include="Compilation\EVisualBasicKeywords.cs" />
+    <Compile Include="Controls\NoneOperandEditor.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\Definition\AssemblyDefinitionControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
